--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
     "vue": "^2.6.12",
+    "vue-google-signin-button-directive": "^1.0.3",
     "vue-hot-reload-api": "^2.3.4",
-    "vue-js-modal": "^2.0.0-rc.6"
+    "vue-js-modal": "^2.0.0-rc.6",
+    "vue-sweetalert2": "^3.0.8"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
